# zarma_test

./: pyproject.toml
1/: 1.py
2/: 2.py  db.py  example.db
3/: 3.py  goods.csv  sales.json
4/: 4.py  tests.bash
